XMLSerializer.serializeToString() doesn't properly escape \n, \n and \t https://bugs.webkit.org/show_bug.cgi?id=227844

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT test now that one more subtest is passing.

* web-platform-tests/domparsing/XMLSerializer-serializeToString-expected.txt:

Source/WebCore:

XMLSerializer.serializeToString() doesn't properly escape \n, \n and \t.

This is causing the "check XMLSerializer.serializeToString escapes attribute values for roundtripping" subtest to fail in WebKit on:
http://wpt.live/domparsing/XMLSerializer-serializeToString.html

Chrome and Firefox both escape these and pass this WPT subtest.

The specification does not indicate we should escape those:
- https://w3c.github.io/DOM-Parsing/#dfn-serializing-an-attribute-value
But there is an open bug about this:
- https://github.com/w3c/DOM-Parsing/issues/59

No new tests, rebaselined existing test.

* editing/MarkupAccumulator.cpp:
(WebCore::elementCannotHaveEndTag):
* editing/MarkupAccumulator.h:


Canonical link: https://commits.webkit.org/239576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279815 268f45cc-cd09-0410-ab3c-d52691b4dbfc